[project]
name = "kaggle-knight-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "marimo>=0.19.10",
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyzmq>=27.1.0",
    "rembg[cpu]>=2.0.73",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]
